--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<p class="tagline text">How much do you know about the fashion industry?</p>
 
-			<p class="question text">What is the name of Balmain's youngest ever creative director?</p>
+			<p class="question text">What is the name of Balmain's youngest creative director?</p>
 
 			<ul class="choices text">
 				<li><input type="checkbox">Ryan Phillipe</input></li>
